demo/terraform/ecs-service.tf
resource "aws_ecs_service" "demo" {
  name            = "demo-service"
  cluster         = aws_ecs_cluster.demo.id          #Service ko banking-cluster mein run karo.
  task_definition = aws_ecs_task_definition.demo.arn #Jo container blueprint humne banaya hai, usko use karo.

  launch_type   = "FARGATE" #EC2 server manage nahi karna; AWS Fargate par container run karo.
  desired_count = 1         #Ek running task maintain karo.

  network_configuration {
    subnets = [
      aws_subnet.public.id #Task ko hamare public subnet mein run karo.
    ]

    security_groups = [
      aws_security_group.ecs_demo.id #Ye Security Group task par apply karo.
    ]

    assign_public_ip = true #Task ko public IP assign karo.
  }
  tags = {
    Project     = "banking-cicd"
    Environment = "dev"
    ManagedBy   = "terraform"
  }
}
